		 (classes that are marked with a ContractClassForAttribute) (fixes #19).
		-[Core] Resolving variant collections is now supported for container-uncontrolled collections as well
		 (fixes #25).
		-[Core] RegisterConditional methods added to make conditional registrations for both non-generic and
		 closed-generic and open-generic types (fixes #4).

	Breaking Changes:
		-[Core] IConstructorVerificationBehavior and IConstructorVerificationBehavior made obsolete and
		 replaced with a new IDependencyInjectionBehavior abstraction that combines the two (fixes #2).
		-[Core] Constructor overload 'Container(ContainerOptions)' removed from Container (fixes #40).
		-[Core] Made ScopedLifestyle.WhenScopeEnds method non-virtual (fixes #11).
		-[Core] Made ScopedLifestyle.RegisterForDisposal method non-virtual (fixes #11).
		-[Core] Made ScopedLifestyle.CreateCurrentScopeProvider method abstract (fixes #11).
		-[Core] Removed ScopedLifestyle.DisposeInstances method (fixes #11).
		-[Core] Removed Container.InjectProperties method (fixes #12).
		-[Core] Removed the Container.RegisterSingle method overloads (fixes #44).
		-[Core] Removed the Container.RegisterAll method overloads (fixes #42).
		-[Core] Moved DecoratorPredicateContext class to the SimpleInjector root namespace (fixes #7).
		-[Core] Moved DecoratorContext to the SimpleInjector root namespace (fixes #7).
		-[Core] Removed RegisterSingleDecorator extension methods (fixed #7).
		-[Core] Removed RegisterAllOpenGeneric extension methods (fixes #7).
		-[Core] Removed RegisterOpenGeneric and RegisterSingleOpenGeneric extension methods (fixes #7).
		-[Core] Moved OpenGenericPredicateContext to the SimpleInjector root namespace (fixes #7).
		-[Core] Second argument of Container.Register(Type, Type) renamed from "implementation" to
		 "implementationType".
		-[Core] Removed RegisterManyForOpenGeneric extension methods (fixes #7).
		-[Core] Removed GetTypesToRegister extension methods (fixes #7).