@@ -5,8 +5,11 @@
     using Microsoft.VisualStudio.TestTools.UnitTesting;
     using SimpleInjector.Tests.Unit;
 
+    /// <summary>
+    /// Normal tests.
+    /// </summary>
     [TestClass]
-    public class ContainerRegisteredServiceContainerAnalyzerTests
+    public partial class ContainerRegisteredServiceContainerAnalyzerTests
     {
         [TestMethod]
         public void Analyze_ComponentDependingOnUnregisteredConcreteType_ReturnsWarning()
@@ -72,48 +75,6 @@
         }
 
         [TestMethod]
-        public void Analyze_ComponentDependingOnUnregisteredReadOnlyCollection_ReturnsWarning()
-        {
-            // Arrange
-            var container = new Container();
-
-            container.Register<Consumer<IReadOnlyCollection<ILogger>>>();
-
-            container.Verify();
-
-            // Act
-            var results = 
-                Analyzer.Analyze(container).OfType<ContainerRegisteredServiceDiagnosticResult>().ToArray();
-
-            // Assert
-            Assert.AreEqual(1, results.Length);
-            Assert.AreEqual(
-                "Consumer<IReadOnlyCollection<ILogger>> depends on container-registered type IReadOnlyCollection<ILogger>.",
-                results.Single().Description);
-        }
-
-        [TestMethod]
-        public void Analyze_ComponentDependingOnUnregisteredReadOnlyList_ReturnsWarning()
-        {
-            // Arrange
-            var container = new Container();
-
-            container.Register<Consumer<IReadOnlyList<ILogger>>>();
-
-            container.Verify();
-
-            // Act
-            var results = 
-                Analyzer.Analyze(container).OfType<ContainerRegisteredServiceDiagnosticResult>().ToArray();
-
-            // Assert
-            Assert.AreEqual(1, results.Length);
-            Assert.AreEqual(
-                "Consumer<IReadOnlyList<ILogger>> depends on container-registered type IReadOnlyList<ILogger>.",
-                results.Single().Description);
-        }
-
-        [TestMethod]
         public void Analyze_ComponentDependingOnUnregisteredICollection_ReturnsWarning()
         {
             // Arrange
@@ -153,48 +114,6 @@
             Assert.AreEqual(
                 "Consumer<IList<ILogger>> depends on container-registered type IList<ILogger>.",
                 results.Single().Description);
-        }
-
-        [TestMethod]
-        public void Analyze_ComponentDependingOnReadOnlyCollectionForRegisteredCollection_DoesNotReturnsAWarning()
-        {
-            // Arrange
-            var container = new Container();
-
-            container.Register<Consumer<IReadOnlyCollection<ILogger>>>();
-
-            // Since this collection is registered, the previous registration should not yield a warning.
-            container.RegisterCollection<ILogger>(new[] { typeof(NullLogger) });
-            
-            container.Verify();
-
-            // Act
-            var results = 
-                Analyzer.Analyze(container).OfType<ContainerRegisteredServiceDiagnosticResult>().ToArray();
-
-            // Assert
-            Assert.AreEqual(0, results.Length, "actual: " + string.Join(" - ", results.Select(r => r.Description)));
-        }
-
-        [TestMethod]
-        public void Analyze_ComponentDependingOnReadOnlyListForRegisteredCollection_DoesNotReturnsAWarning()
-        {
-            // Arrange
-            var container = new Container();
-
-            container.Register<Consumer<IReadOnlyList<ILogger>>>();
-
-            // Since this collection is registered, the previous registration should not yield a warning.
-            container.RegisterCollection<ILogger>(new[] { typeof(NullLogger) });
-
-            container.Verify();
-
-            // Act
-            var results =
-                Analyzer.Analyze(container).OfType<ContainerRegisteredServiceDiagnosticResult>().ToArray();
-
-            // Assert
-            Assert.AreEqual(0, results.Length, "actual: " + string.Join(" - ", results.Select(r => r.Description)));
         }
     }
 }
