@@ -575,7 +575,7 @@
         {
             // Arrange
             string expected1 = "The following diagnostic warnings were reported";
-            string expected2 = "ServiceWithDependency<IPlugin> (Singleton) depends on IPlugin (Transient)";
+            string expected2 = "ServiceWithDependency<IPlugin> (Singleton) depends on IPlugin";
             string expected3 = "See the Error property for detailed information about the warnings.";
 
             var container = ContainerFactory.New();
