@@ -80,10 +80,13 @@ namespace SimpleInjector.Diagnostics.Analyzers
         private static string BuildRelationshipDescription(KnownRelationship relationship)
         {
             return string.Format(CultureInfo.InvariantCulture,
-                "{0} ({1}) depends on {2} ({3}).",
+                "{0} ({1}) depends on {2}{3} ({4}).",
                 Helpers.ToFriendlyName(relationship.ImplementationType),
                 relationship.Lifestyle.Name,
                 Helpers.ToFriendlyName(relationship.Dependency.ServiceType),
+                relationship.Dependency.ServiceType != relationship.Dependency.ImplementationType
+                    ? " implemented by " + Helpers.ToFriendlyName(relationship.Dependency.ImplementationType)
+                    : string.Empty,
                 relationship.Dependency.Lifestyle.Name);
         }
         
